TIMELINE EVENTS: inserted a break when the endtime is reached. Everything seems fixed now

--- a/app/views/home/_timeline.html.erb
+++ b/app/views/home/_timeline.html.erb
@@ -23,170 +23,170 @@
 </style>
 
 <div class="hour" id="hr-00">
-  <div class="half-hour">
+  <div class="half-hour" data-time="00:00">
     <h6>00:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="00:30"></div>
 </div>
 
 <div class="hour" id="hr-01">
-  <div class="half-hour">
+  <div class="half-hour" data-time="01:00">
     <h6>01:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="01:30"></div>
 </div>
 
 <div class="hour" id="hr-02">
-  <div class="half-hour">
+  <div class="half-hour" data-time="02:00">
     <h6>02:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="02:30"></div>
 </div>
 
 <div class="hour" id="hr-03">
-  <div class="half-hour">
+  <div class="half-hour" data-time="03:00">
     <h6>03:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="03:30"></div>
 </div>
 
 <div class="hour" id="hr-04">
-  <div class="half-hour">
+  <div class="half-hour" data-time="04:00">
     <h6>04:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="04:30"></div>
 </div>
 
 <div class="hour" id="hr-05">
-  <div class="half-hour">
+  <div class="half-hour" data-time="05:00">
     <h6>05:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="05:30"></div>
 </div>
 
 <div class="hour" id="hr-06">
-  <div class="half-hour">
+  <div class="half-hour" data-time="06:00">
     <h6>06:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="06:30"></div>
 </div>
 
 <div class="hour" id="hr-07">
-  <div class="half-hour">
+  <div class="half-hour" data-time="07:00">
     <h6>07:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="07:30"></div>
 </div>
 
 <div class="hour" id="hr-08">
-  <div class="half-hour">
+  <div class="half-hour" data-time="08:00">
     <h6>08:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="08:30"></div>
 </div>
 
 <div class="hour" id="hr-09">
-  <div class="half-hour">
+  <div class="half-hour" data-time="09:00">
     <h6>09:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="09:30"></div>
 </div>
 
 <div class="hour" id="hr-10">
-  <div class="half-hour">
+  <div class="half-hour" data-time="10:00">
     <h6>10:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="10:30"></div>
 </div>
 
 <div class="hour" id="hr-11">
-  <div class="half-hour">
+  <div class="half-hour" data-time="11:00">
     <h6>11:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="11:30"></div>
 </div>
 
 <div class="hour" id="hr-12">
-  <div class="half-hour">
+  <div class="half-hour" data-time="12:00">
     <h6>12:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="12:30"></div>
 </div>
 
 <div class="hour" id="hr-13">
-  <div class="half-hour">
+  <div class="half-hour" data-time="13:00">
     <h6>13:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="13:30"></div>
 </div>
 
 <div class="hour" id="hr-14">
-  <div class="half-hour">
+  <div class="half-hour" data-time="14:00">
     <h6>14:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="14:30"></div>
 </div>
 
 <div class="hour" id="hr-15">
-  <div class="half-hour">
+  <div class="half-hour" data-time="15:00">
     <h6>15:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="15:30"></div>
 </div>
 
 <div class="hour" id="hr-16">
-  <div class="half-hour">
+  <div class="half-hour" data-time="16:00">
     <h6>16:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="16:30"></div>
 </div>
 
 <div class="hour" id="hr-17">
-  <div class="half-hour">
+  <div class="half-hour" data-time="17:00">
     <h6>17:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="17:30"></div>
 </div>
 
 <div class="hour" id="hr-18">
-  <div class="half-hour">
+  <div class="half-hour" data-time="18:00">
     <h6>18:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="18:30"></div>
 </div>
 
 <div class="hour" id="hr-19">
-  <div class="half-hour">
+  <div class="half-hour" data-time="19:00">
     <h6>19:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="19:30"></div>
 </div>
 
 <div class="hour" id="hr-20">
-  <div class="half-hour">
+  <div class="half-hour" data-time="20:00">
     <h6>20:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="20:30"></div>
 </div>
 
 <div class="hour" id="hr-21">
-  <div class="half-hour">
+  <div class="half-hour" data-time="21:00">
     <h6>21:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="21:30"></div>
 </div>
 
 <div class="hour" id="hr-22">
-  <div class="half-hour">
+  <div class="half-hour" data-time="22:00">
     <h6>22:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="22:30"></div>
 </div>
 
 <div class="hour" id="hr-23">
-  <div class="half-hour">
+  <div class="half-hour" data-time="23:00">
     <h6>23:00</h6>
   </div>
-  <div class="half-hour"></div>
+  <div class="half-hour" data-time="23:30"></div>
 </div>
 
