TOPBAR: z index increased so glyphicons don't go over

--- a/app/views/home/_topbar.html.erb
+++ b/app/views/home/_topbar.html.erb
@@ -1,5 +1,8 @@
 <style>
-  #topbar {position:fixed;}
+  #topbar {
+    position:fixed;
+    z-index:1;
+  }
   #topbar .toggle{font-size:8vw;}  
 
   #topbar .toggle {
