--- a/app/views/home/_topbar.html.erb
+++ b/app/views/home/_topbar.html.erb
@@ -2,17 +2,12 @@
   #topbar {
     position:fixed;
     z-index:1;
+    background:#79BAEC;
   }
-  #topbar .toggle{font-size:8vw;}  
-
-  #topbar .toggle {
+  #topbar .toggle{
+    font-size:8vw;
     width:33vw;
     margin:0.1vw;
-/*    width:12vw;
-    height:12vw;
-    float:left;
-    margin-left:16.5vw;
-    margin-top:1.5vw;*/
   }
   .toggle a {
     width:100%;
