--- a/app/views/home/modal_partials/_new_entry.html.erb
+++ b/app/views/home/modal_partials/_new_entry.html.erb
@@ -7,6 +7,7 @@
 
         <!-- Modal Header -->
         <div class="modal-header">
+          <h3 id="new-entry-date"></h3>
           <label>New 
             <select name="category_id" required>
               <%@categories.each do |c|%>
@@ -24,7 +25,7 @@
         <div class="modal-body">
         
           <label>Date
-            <input type="date" name="entry_date" required>
+            <input type="hidden" name="entry_date" required>
           </label>
 
           <label>Start
